syntax = "proto2";

option java_multiple_files = true;
option java_package = "replication";
option java_outer_classname = "ChordialRaftLogEntry";

package chordial.replication;


message LogEntry {

    // SHA-256 hash value of the key
    required string key_hash = 1;

    // Compressed write value for the request
    required bytes compressed_value = 2;
}